# yandex-music-discord-rpc-for-linux

./: Cargo.toml
src/: dbus.rs  discord_rpc.rs  get_player.rs  main.rs  metadata.rs
