[package]
name = "yandex-music-discord-rpc-for-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
zbus = { version = "5.13.2" }
zvariant = "5.9.2"
anyhow = "1.0.100"
discord-rich-presence = "1.1.0"
chrono = "0.4.43"
sysinfo = "0.38.0"